<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bejeviy"
    tools:context=".RecentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/sp20"
            android:contentDescription="@string/description"
            android:src="@drawable/recent" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/shape_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp18"
            android:text="@string/note"
            android:textColor="@color/brown"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/workk"
            android:textColor="@color/brown"
            android:textSize="@dimen/sp11" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/shape_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp18"
            android:text="@string/voice"
            android:textColor="@color/brown"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/voice2"
            android:contentDescription="@string/description" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/shape_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_marginTop="@dimen/sp30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp18"
            android:text="@string/voice"
            android:textColor="@color/brown"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/voice2"
            android:contentDescription="@string/description" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/shape_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:layout_marginTop="@dimen/sp30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp18"
            android:text="@string/note"
            android:textColor="@color/brown"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/knife_marks_broken_head_no_eyes_w"
            android:textColor="@color/brown"
            android:textSize="@dimen/sp11" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/shape_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:layout_marginTop="@dimen/sp30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp18"
            android:text="@string/note"
            android:textColor="@color/brown"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_drink_for_detective_and_cigarettes"
            android:textColor="@color/brown"
            android:textSize="@dimen/sp11" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/shape_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        android:layout_marginTop="@dimen/sp30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sp18"
            android:text="@string/note"
            android:textColor="@color/brown"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tangled_another_fo_ring_mark"
            android:textColor="@color/brown"
            android:textSize="@dimen/sp11" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="2dp">

            <ImageView
                android:id="@+id/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/post"
                android:contentDescription="@string/description" />

            <ImageView
                android:id="@+id/work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/work"
                android:contentDescription="@string/description"
                android:layout_marginHorizontal="70dp"/>

            <ImageView
                android:id="@+id/record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/voice_control"
                android:contentDescription="@string/description" />

        </LinearLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>